<resources>
    <string name="app_name">Family Coin</string>
    <string name="user_string">user</string>
    <string name="password_string">password</string>
    <string name="tv_login">Iniciar Sesion</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="tv_register">Crear cuenta nueva</string>
    <string name="repeat_password">repeat password</string>
    <string name="greeting">Hello, %s!</string>
    <string name="Tasks_option">Tasks</string>
    <string name="Shop_option">Shop</string>
    <string name="Family_option">Family</string>
    <string name="LoreIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">search</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
</resources>