<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context=".JoinActivity">



        <ImageView
            android:id="@+id/tv_login_title"
            android:layout_width="333dp"
            android:layout_height="163dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/familycoinicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.662"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:backgroundTint="#00BCD4"
            android:gravity="start"
            android:hint="@string/user_string"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password_string"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:autofillHints="password"
            android:backgroundTint="#00BCD4"
            android:gravity="start"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="@id/tv_password"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <TextView
            android:id="@+id/tv_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repeat_password"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:autofillHints="password"
            android:backgroundTint="#00BCD4"
            android:gravity="start"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@id/tv_repassword"
            app:layout_constraintTop_toBottomOf="@id/tv_repassword" />


        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="#F1BE12"
            android:text="@string/tv_register"
            android:textAllCaps="false"
            android:textColor="#2A2929"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@+id/et_repassword" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_repassword"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toStartOf="@+id/switch2"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_repassword"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toEndOf="@+id/switch2"
            app:layout_constraintTop_toBottomOf="@+id/et_repassword"
            app:layout_constraintVertical_bias="0.909" />


</androidx.constraintlayout.widget.ConstraintLayout>